Modified the code to avoid null pointer exception